--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-RESTREVIEWS_DB_URI=mongodb://admin:password@192.168.1.101:27017
+MONGO_URI=mongodb://127.0.0.1:27017
 RESTREVIEWS_NS=sample_restaurants
 PORT=5001
